<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="genderFrag"
            type="com.example.healthypalate.ui.getstarted.Gender" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.getstarted.Gender">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:gravity="center"
            android:text="@string/question_gender"
            android:textColor="@color/black"
            android:textSize="32dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_male"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <view
            android:id="@+id/btn_male"
            class="android.widget.Button"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:background="@drawable/gender_option"
            android:text="@string/male"
            android:fontFamily="@font/varela_round"
            app:layout_constraintBottom_toTopOf="@+id/btn_female"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <view
            android:id="@+id/btn_female"
            class="android.widget.Button"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:background="@drawable/gender_option"
            android:text="@string/female"
            android:fontFamily="@font/varela_round"
            app:layout_constraintBottom_toTopOf="@+id/container_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_male" />

        <LinearLayout
            android:id="@+id/container_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/varela_round"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:text="@string/disclaimer"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="4dp">

                <view
                    android:id="@+id/back_dob"
                    class="android.widget.Button"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_button"
                    android:fontFamily="@font/varela_round"
                    android:text="@string/back"
                    android:onClick="@{() -> genderFrag.backGender()}"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/next_dob"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <view
                    android:id="@+id/next_dob"
                    class="android.widget.Button"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_button"
                    android:fontFamily="@font/varela_round"
                    android:text="@string/next"
                    android:onClick="@{() -> genderFrag.gotoDob()}"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/back_dob"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>