<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="weightFrag"
            type="com.example.healthypalate.ui.getstarted.Weight" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.getstarted.Weight">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/text_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:gravity="center"
            android:text="@string/question_weight"
            android:textColor="@color/black"
            android:textSize="32dp"

            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/weight_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="140dp"
            android:hint="weight"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/container_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_weight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weight_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/container_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/varela_round"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:text="@string/disclaimer"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="4dp">

                <view
                    android:id="@+id/back_dob"
                    class="android.widget.Button"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_button"
                    android:text="@string/back"
                    android:onClick="@{() -> weightFrag.backHeight()}"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/next_dob"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <view
                    android:id="@+id/next_dob"
                    class="android.widget.Button"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_button"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:onClick="@{() -> weightFrag.gotoBmi()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/back_dob"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>