<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/main_nav_host_frag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navGraph="@navigation/main_navigation"
            android:name="androidx.navigation.fragment.NavHostFragment"/>

        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.example.healthypalate.ui.nav.BottomNavDrawer"
            android:id="@+id/bottom_nav_drawer"/>


        <com.google.android.material.bottomappbar.BottomAppBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_app_bar"
            android:layout_gravity="bottom"
            app:fabAlignmentMode="end"
            app:fabCradleMargin="@dimen/bottom_app_bar_fab_cradle_margin"
            app:fabAnimationMode="scale"
            app:fabCradleRoundedCornerRadius="@dimen/bottom_app_bar_fab_cradle_corner_radius"
            app:hideOnScroll="true">

            <LinearLayout
                android:id="@+id/bottom_app_bar_content_container"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/min_touch_target_size"
                android:layout_marginVertical="@dimen/grid_0_5"

                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/grid_0_5">

                <ImageView
                    android:id="@+id/bottom_app_bar_chevron"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/bottom_app_bar_chevron_content_desc"
                    app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24"
                    app:tint="?attr/colorOnPrimarySurface" />

                <ImageView
                    android:id="@+id/bottom_app_bar_logo"
                    android:layout_width="@dimen/bottom_app_bar_logo_size"
                    android:layout_height="@dimen/bottom_app_bar_logo_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/grid_1"
                    android:contentDescription="@string/bottom_app_bar_logo_content_desc"
                    android:foregroundTint="@color/white"
                    app:srcCompat="@drawable/logo_vector" />

                <TextView
                    android:id="@+id/bottom_app_bar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/grid_1"
                    android:text="@string/navigation_home"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="?attr/colorControlNormal" />

            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fab_transformation_scrim_behavior"
            android:src="@drawable/focus_scan"
            app:layout_anchor="@id/bottom_app_bar" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>