<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="bmifragment"
    type="com.example.healthypalate.ui.getstarted.BMI" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.getstarted.BMI">


        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/table_background"
            android:orientation="vertical"
            android:shrinkColumns="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>

                <TextView

                    android:id="@+id/range"
                    android:width="160dp"
                    android:height="35dp"
                    android:gravity="center"
                    android:text="Range" />

                <TextView
                    android:id="@+id/classification"
                    android:width="240dp"
                    android:height="35dp"
                    android:gravity="center_vertical"
                    android:text="Classification" />
            </TableRow>

            <TableRow
                android:id="@+id/underweight"
                android:background="@drawable/table_row_back">

                <TextView
                    android:width="160dp"
                    android:height="35dp"
                    android:gravity="center"
                    android:text="18.5" />

                <TextView
                    android:width="240dp"
                    android:height="35dp"
                    android:gravity="center_vertical"
                    android:text="Underweight" />
            </TableRow>

            <TableRow
                android:id="@+id/normal"
                android:background="@drawable/table_row_back">

                <TextView
                    android:width="160dp"
                    android:height="35dp"
                    android:gravity="center"
                    android:text="18.5 - 24.9" />

                <TextView
                    android:width="240dp"
                    android:height="35dp"
                    android:gravity="center_vertical"
                    android:text="Normal range" />
            </TableRow>

            <TableRow
                android:id="@+id/overweight"
                android:background="@drawable/table_row_back">

                <TextView
                    android:width="160dp"
                    android:height="35dp"
                    android:gravity="center"
                    android:text="=25.0 " />

                <TextView
                    android:width="240dp"
                    android:height="35dp"
                    android:gravity="center_vertical"
                    android:text="Overweight" />
            </TableRow>

            <TableRow
                android:id="@+id/preobese"
                android:background="@drawable/table_row_back">

                <TextView
                    android:width="160dp"
                    android:height="35dp"
                    android:gravity="center"
                    android:text="25.0 - 29.9" />

                <TextView
                    android:width="240dp"
                    android:height="35dp"
                    android:gravity="center_vertical"
                    android:text="Preobese" />
            </TableRow>

            <TableRow
                android:id="@+id/obese"
                android:background="@drawable/table_row_back">

                <TextView
                    android:width="160dp"
                    android:height="35dp"
                    android:gravity="center"
                    android:text="=30.0" />

                <TextView
                    android:width="240dp"
                    android:height="35dp"
                    android:gravity="center_vertical"
                    android:text="Obese" />
            </TableRow>

            <TableRow
                android:id="@+id/obeseclass1"
                android:background="@drawable/table_row_back">

                <TextView
                    android:width="160dp"
                    android:height="35dp"
                    android:gravity="center"
                    android:text="30.0 - 34.9" />

                <TextView
                    android:width="240dp"
                    android:height="35dp"
                    android:gravity="center_vertical"
                    android:text="Obese Class I" />
            </TableRow>

            <TableRow
                android:id="@+id/obeseclass2"
                android:background="@drawable/table_row_back">

                <TextView
                    android:width="160dp"
                    android:height="35dp"
                    android:gravity="center"
                    android:text="35.0 - 39.9" />

                <TextView
                    android:width="240dp"
                    android:height="35dp"
                    android:gravity="center_vertical"
                    android:text="Obese Class II" />
            </TableRow>

            <TableRow android:id="@+id/obeseclass3">

                <TextView
                    android:width="160dp"
                    android:height="35dp"
                    android:gravity="center"
                    android:text="=40.0" />

                <TextView
                    android:width="240dp"
                    android:height="35dp"
                    android:gravity="center_vertical"
                    android:text="Obese Class III" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:gravity="center"
            android:text="@string/bmi_classification"
            android:textColor="@color/black"
            android:textSize="32dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/varela_round"
            android:gravity="center"
            android:text="@string/bmi_answer"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/goto_metrics"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <view
            android:id="@+id/goto_metrics"
            class="android.widget.Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:fontFamily="@font/varela_round"
            android:onClick="@{() -> bmifragment.gotomain()}"
            android:text="@string/finish"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/tv_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/varela_round"
            android:text="0.0"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>